--- a/Songbook.tex
+++ b/Songbook.tex
@@ -42,7 +42,7 @@
 % \renewcommand{\chorusfont}{\it}               % -- font refrenu, podobne sloka atd
 
 % -- font akordu 
-\renewcommand{\printchord}[1]{\sffamily\bf\large#1}
+\renewcommand{\printchord}[1]{\sffamily\small\bf#1}
 
 % -- mezery
 % -- posunuti sloky doprava
