--- a/songs/Baroko.tex
+++ b/songs/Baroko.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Baroko}[by={Richard Muller}]
-\beginverse*{\nolyrics Intro: 
-\[Dmi]    \[C]  \[Dmi]    \[C]         \brk
+\beginverse*{\nolyrics Intro: \[Dmi]    \[C]  \[Dmi]    \[C]         \brk
 }\endverse
 \beginverse
 \[Dmi]Schoulené holky spí \[C]nahé \brk
