--- a/songs/Co_Z_Tebe_Bude.tex
+++ b/songs/Co_Z_Tebe_Bude.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Co Z Tebe Bude}[by={Pokáč}]
 \capo{3}
-\beginverse*{\nolyrics Intro: 
-\[Am]  \[Dm]   \[G]  \[C]         \brk
+\beginverse*{\nolyrics Intro: \[Am]  \[Dm]   \[G]  \[C]         \brk
 }\endverse
 \beginverse
 \[C]Když jsem byl prcek,\[Dm] tak se mě všude\brk
