--- a/songs/Good_Riddance_Time_Of_Your_Life.tex
+++ b/songs/Good_Riddance_Time_Of_Your_Life.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Good Riddance Time Of Your Life}[by={Green Day}]
-\beginverse*{\nolyrics Intro: 
-  \[G]   \[G]   \[Cadd9]       \brk
+\beginverse*{\nolyrics Intro: \[G]   \[G]   \[Cadd9]       \brk
 }\endverse
 \beginverse
 \[G]Another turning point, a \[Cadd9]fork stuck in the \[D]road,\brk
