--- a/songs/Grónská_písnička.tex
+++ b/songs/Grónská_písnička.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Grónská písnička}[by={Jaromír Nohavica}]
-\beginverse*{\nolyrics Intro: 
-\[D] \[Em]   \[A] \[D] \[Em]   \[A] \[D]         \brk
+\beginverse*{\nolyrics Intro: \[D] \[Em]   \[A] \[D] \[Em]   \[A] \[D]         \brk
 }\endverse
 \beginverse
 \[D]Daleko \[Em]na severu \[A]je grónská \[D]zem,\brk
