--- a/songs/Hallelujah.tex
+++ b/songs/Hallelujah.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Hallelujah}[by={Jeff Buckley}]
 \transpose{7}
-\beginverse*{\nolyrics Intro: 
-\[C] \[Am]  \[C] \[Am]         \brk
+\beginverse*{\nolyrics Intro: \[C] \[Am]  \[C] \[Am]         \brk
 }\endverse
 \beginverse
 I \[C]heard there was a \[Am]secret chord\brk
