--- a/songs/Hey_There_Delilah.tex
+++ b/songs/Hey_There_Delilah.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Hey There Delilah}[by={Plain White T's}]
-\beginverse*{\nolyrics Intro: 
-\[D]  \[F#m]    \[D]  \[F#m]         \brk
+\beginverse*{\nolyrics Intro: \[D]  \[F#m]    \[D]  \[F#m]         \brk
 }\endverse
 \beginverse
 \[D]Hey there Delilah, what's it \[F#m]like in New York City? \brk
