--- a/songs/Holky_To_Objektivně_Lehčí_Maj.tex
+++ b/songs/Holky_To_Objektivně_Lehčí_Maj.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Holky To Objektivně Lehčí Maj}[by={Pokáč}]
 \capo{3}
-\beginverse*{\nolyrics Intro: 
-\[G] \[Em]  \[D] \[C]         \brk
+\beginverse*{\nolyrics Intro: \[G] \[Em]  \[D] \[C]         \brk
 }\endverse
 \beginverse
 \[G]Kdybych byl holka,\brk
