--- a/songs/Hotel_California.tex
+++ b/songs/Hotel_California.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Hotel California}[by={Eagles}]
 \capo{2}
-\beginverse*{\nolyrics Intro: 
-\[Am]    \[E7]    \[G]   \[D]   \[F]   \[C]   \[Dm]    \brk
+\beginverse*{\nolyrics Intro: \[Am]    \[E7]    \[G]   \[D]   \[F]   \[C]   \[Dm]    \brk
 }\endverse
 \beginverse
 \[Am]On a dark desert highway, c\[E7]ool wind in my hair\brk
