--- a/songs/Jasná_Zpráva.tex
+++ b/songs/Jasná_Zpráva.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Jasná Zpráva}[by={Olympic}]
-\beginverse*{\nolyrics Intro: 
-\[Am]   \[C]  \[G]         \brk
+\beginverse*{\nolyrics Intro: \[Am]   \[C]  \[G]         \brk
 }\endverse
 \beginverse
 \[G]Skončili jsme, jasná zpráva,\brk
