--- a/songs/Let_It_Be.tex
+++ b/songs/Let_It_Be.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Let It Be}[by={The Beatles}]
-\beginverse*{\nolyrics Intro: 
-\[C]    \[G]    \[F]   \[C/E]   \[Dm7]   \[C]\brk
+\beginverse*{\nolyrics Intro: \[C]    \[G]    \[F]   \[C/E]   \[Dm7]   \[C]\brk
 }\endverse
 \beginverse
 When I \[C]find myself in \[G]times of trouble, \[Am]Mother \[Am/G]Mary \[Fmaj7]comes to \[F6]me\brk
@@ -45,5 +44,4 @@ Let it \[Am]be, let it \[G]be,  let it \[F]be, let it \[C]be\brk
 Let it \[Am]be, let it \[G]be,  let it \[F]be, ya let it \[C]be\brk
 \[C]Whisper words of \[G]wisdom, let it \[F]be \[C/E]eeee\[Dm7]eee \[C]\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
