--- a/songs/Láska_Na_Vsi.tex
+++ b/songs/Láska_Na_Vsi.tex
@@ -41,5 +41,5 @@ A \[G]pláli láskou navzdory, že \[G7]vezou brambo\[C]ry.\brk
 My jsme se \[C]milovali celý den \[Am]na seně i za stromem,\brk
 \[G]V kostele či na poli, když \[G7]kolem řvaly \[C]traktory\brk
 A \[C]nevnímali běh času, \[Am]ani hlášení rozhlasu\brk
-A \[G]pláli láskou navzdory, že \[G7]vezou   A D \[C]G B     Z Tebe  a text - Chords and  Je    Dneska  - Láska Na Vsi  - Láska Na Vsi  - Láska Na Vsi\brk
+A \[G]pláli láskou navzdory, že \[G7]vezou brambory.
 \endchorus\endsong
