--- a/songs/Malování.tex
+++ b/songs/Malování.tex
@@ -1,42 +1,42 @@
 \sclearpage\beginsong{Malování}[by={Divokej Bill}]
 \beginverse
-\[Dm]Nesnaž, se zn\[Dsus4]áš  se\[Dm],  \[Bb] řekni mi co\[C] je ji-\brk
-n\[Dm]ý, jak v kleci \[Dsus4]máš   \[Dm]se \[Bb]   \[C]pro nevin-\brk
-n\[Dm]ý noci \[Dsus4]dlou - \[Dm]hý \[Bb]jsou plný \[C]touhy a\brk
-\[Dm]lásky \[Dsus4]nás   \[Dm]dvou.\brk
+\[Dm]Nesnaž, se znáš  se\[Dm],  \[Bb] řekni mi co\[C] je ji-\brk
+n\[Dm]ý, jak v kleci máš   \[Dm]se \[Bb]   \[C]pro nevin-\brk
+n\[Dm]ý noci dlou - \[Dm]hý \[Bb]jsou plný \[C]touhy a\brk
+\[Dm]lásky nás   \[Dm]dvou.\brk
 Všechno hezký       \[C]         \brk
-\[Dm]za se\[Dsus4]bou   \[Dm]mám,\[Bb]   můžu \[C]si za to\brk
+\[Dm]za sebou   \[Dm]mám,\[Bb]   můžu \[C]si za to\brk
 \[Dm]sám,\[Dm]   \[Bb]   v hlavě \[C]hlavolam,\brk
-\[Dm]jen táta a \[Dsus4]má -  \[Dm]ma \[Bb]   jsou\[C] s náma\brk
-\[Dm]napořád s \[Dsus4]ná -  \[Dm]ma   \[Bb]         \brk
+\[Dm]jen táta a má -  \[Dm]ma \[Bb]   jsou\[C] s náma\brk
+\[Dm]napořád s ná -  \[Dm]ma   \[Bb]         \brk
 \endverse
 \beginchorus
 To je to tvoje          \[C]         \brk
-\[Dm]malo\[Dsus4]vá -  \[Dm]ní \[Bb]vzdušnejch \[C]zámků,\brk
+\[Dm]malová -  \[Dm]ní \[Bb]vzdušnejch \[C]zámků,\brk
 \[Dm]malování po \[Bb]zdech holejma \[C]rukama tě\brk
-\[Dm]nezach\[Dsus4]rá -  \[Dm]ní, už \[Bb]máš na ka\[C]hánku,\brk
-\[Dm]nezach\[Dsus4]rá -  \[Dm]ní, už jsi \[Bb]na zádech.\brk
+\[Dm]nezachrá -  \[Dm]ní, už \[Bb]máš na ka\[C]hánku,\brk
+\[Dm]nezachrá -  \[Dm]ní, už jsi \[Bb]na zádech.\brk
 Je to                            \[C]         \brk
-\[Dm]za \[Dsus4]ná -  \[Dm]ma, ty čteš \[Bb]poslední strán\[C]ku,\brk
-\[Dm]za ná\[Dsus4] -  ma\[Dm],  \[Bb] na zá\[C]dech,\brk
-\[Dm]za \[Dsus4]ná -  \[Dm]ma, už \[Bb]máš naka\[C]hánku,\brk
-\[Dm]mezi \[Dsus4]ná -  \[Dm]ma,\[Bb] .....mi taky \[Gm]došel \[Am]dech..............\brk
-\[Dm]    \[Dsus4]     \[Dm]    \[Bb]     \[Gm]  \[Am]         \brk
+\[Dm]za ná -  \[Dm]ma, ty čteš \[Bb]poslední strán\[C]ku,\brk
+\[Dm]za ná -  ma\[Dm],  \[Bb] na zá\[C]dech,\brk
+\[Dm]za ná -  \[Dm]ma, už \[Bb]máš naka\[C]hánku,\brk
+\[Dm]mezi ná -  \[Dm]ma,\[Bb] .....mi taky \[Gm]došel \[Am]dech..............\brk
+\[Dm]         \[Dm]    \[Bb]     \[Gm]  \[Am]         \brk
 \endchorus
 \beginchorus
-\[Dm]malo\[Dsus4]vá -  \[Dm]ní \[Bb]vzdušnejch \[C]zámků,\brk
+\[Dm]malová -  \[Dm]ní \[Bb]vzdušnejch \[C]zámků,\brk
 \[Dm]malování po \[Bb]zdech holejma \[C]rukama tě\brk
-\[Dm]nezach\[Dsus4]rá -  \[Dm]ní, už \[Bb]máš na ka\[C]hánku,\brk
-\[Dm]nezach\[Dsus4]rá -  \[Dm]ní, už jsi \[Bb]na zádech.\brk
+\[Dm]nezachrá -  \[Dm]ní, už \[Bb]máš na ka\[C]hánku,\brk
+\[Dm]nezachrá -  \[Dm]ní, už jsi \[Bb]na zádech.\brk
 Je to                            \[C]         \brk
-\[Dm]za \[Dsus4]ná -  \[Dm]ma, ty čteš \[Bb]poslední strán\[C]ku,\brk
-\[Dm]za ná\[Dsus4] -  ma\[Dm],  \[Bb] na zá\[C]dech,\brk
-\[Dm]za \[Dsus4]ná -  \[Dm]ma, už \[Bb]máš naka\[C]hánku,\brk
-\[Dm]mezi \[Dsus4]ná -  \[Dm]ma,\[Bb] .....mi taky \[Gm]došel \[Am]dech..............\brk
+\[Dm]za ná -  \[Dm]ma, ty čteš \[Bb]poslední strán\[C]ku,\brk
+\[Dm]za ná -  ma\[Dm],  \[Bb] na zá\[C]dech,\brk
+\[Dm]za ná -  \[Dm]ma, už \[Bb]máš naka\[C]hánku,\brk
+\[Dm]mezi ná -  \[Dm]ma,\[Bb] .....mi taky \[Gm]došel \[Am]dech..............\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
-\[Dm]Zná\[Dsus4]š  se,\[Dm]   \[Bb]řekni mi co \[C]je ji-\brk
-n\[Dm]ý, jak v kleci \[Dsus4]máš   \[Dm]se \[Bb]   \[C]pro nevin-\brk
-n\[Dm]ý noci \[Dsus4]dlou - \[Dm]hý \[Bb]jsou plný \[C]touhy a\brk
-\[Dm]lásky \[Dsus4]nás   \[Dm9] A D G B   more readable and scrolling friendly, also laid out the entire   I     For     I     For     \brk
+\[Dm]Znáš  se,\[Dm]   \[Bb]řekni mi co \[C]je ji-\brk
+n\[Dm]ý, jak v kleci máš   \[Dm]se \[Bb]   \[C]pro nevin-\brk
+n\[Dm]ý noci dlou - \[Dm]hý \[Bb]jsou plný \[C]touhy a\brk
+\[Dm]lásky nás   tří.
 }\endverse\endsong
