--- a/songs/Mamma_Mia.tex
+++ b/songs/Mamma_Mia.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Mamma Mia}[by={ABBA}]
-\beginverse*{\nolyrics Intro: 
-\[D]  \[Daug]         \brk
+\beginverse*{\nolyrics Intro: \[D]  \[Daug]         \brk
 }\endverse
 \beginverse
 \[D]I've been \[A/D]cheated by \[D]you, since I don't know \[G]when\brk
