--- a/songs/Marie.tex
+++ b/songs/Marie.tex
@@ -1,7 +1,4 @@
 \sclearpage\beginsong{Marie}[by={Tomáš Klus}]
-\beginverse*{\nolyrics Intro: 
-\brk
-}\endverse
 \beginverse
 Je \[C]den, tak \[E]pojď Marie ven,\brk
 budeme \[F]žít, házet \[G]šutry do oken.\brk
@@ -47,5 +44,4 @@ býti \[C]věčně na ces\[E]tách a k ránu \[F]spícím plícím \[G]život vd
 Já \[C]mám Marie \[E]rád, když má\[F] moje bytí \[G]spád,\brk
 býti \[C]věčně na ces\[E]tách a k ránu \[F]spícím plícím \[G]život vdechovat.\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
