--- a/songs/Million_Reasons.tex
+++ b/songs/Million_Reasons.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Million Reasons}[by={Lady Gaga}]
-\beginverse*{\nolyrics Intro: 
-\[C]   \[Am]    \[F]   \brk
+\beginverse*{\nolyrics Intro: \[C]   \[Am]    \[F]   \brk
 }\endverse
 \beginverse
 You're \[C]giving me a million reasons to let you go\brk
