--- a/songs/Mám_Doma_Kočku.tex
+++ b/songs/Mám_Doma_Kočku.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Mám Doma Kočku}[by={Pokáč}]
 \capo{1}
-\beginverse*{\nolyrics Intro: 
-\[G]  \[Em]   \[C]  \[D]         \brk
+\beginverse*{\nolyrics Intro: \[G]  \[Em]   \[C]  \[D]         \brk
 }\endverse
 \beginverse
 \[G]Jednou mi drahá říká, \[Em]miláčku, já chci kočku\brk
