--- a/songs/Okno_Mé_Lásky.tex
+++ b/songs/Okno_Mé_Lásky.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Okno Mé Lásky}[by={Olympic}]
-\beginverse*{\nolyrics Intro: 
-\[C]  \[C]  \[C]  \[C]         \brk
+\beginverse*{\nolyrics Intro: \[C]  \[C]  \[C]  \[C]         \brk
 }\endverse
 \beginverse
 \[C]Kdo tě líbá, když ne \[F]já, \[C]kdo tě hlídá když ne \[F]já,\brk
