--- a/songs/Pažitka.tex
+++ b/songs/Pažitka.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Pažitka}[by={Xavier Baumaxa}]
-\beginverse*{\nolyrics Intro: 
-\[A]       \[C#m]    \[Cm]  \[F#m]       \[Dsus2]         \brk
+\beginverse*{\nolyrics Intro: \[A]       \[C#m]    \[Cm]  \[F#m]       \[Dsus2]         \brk
 }\endverse
 \beginverse
 Krajina \[A]svádí k podzimním \[C#m]výletům,\brk
