--- a/songs/Piano_Man.tex
+++ b/songs/Piano_Man.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Piano Man}[by={Billy Joel}]
-\beginverse*{\nolyrics Intro: 
-\[C] \[G] \[F] \[C]  \[F] \[C] \[D7]  \[G]  \[C] \[G] \[F] \[C]  \[F] \[G] \[C]   \[G]         \brk
+\beginverse*{\nolyrics Intro: \[C] \[G] \[F] \[C]  \[F] \[C] \[D7]  \[G]  \[C] \[G] \[F] \[C]  \[F] \[G] \[C]   \[G]         \brk
 }\endverse
 \beginverse
 It's \[C]nine o'\[G]clock on a \[F]Satur\[C]day\brk
