--- a/songs/Pocity.tex
+++ b/songs/Pocity.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Pocity}[by={Tomáš Klus}]
-\beginverse*{\nolyrics Intro: 
-\[G]   \[D]   \[Em]    \brk
+\beginverse*{\nolyrics Intro: \[G]   \[D]   \[Em]    \brk
 }\endverse
 \beginverse
 \[G]Z posledních pocitů \[D]\brk
