--- a/songs/Pompeii.tex
+++ b/songs/Pompeii.tex
@@ -1,7 +1,5 @@
 \sclearpage\beginsong{Pompeii}[by={Bastille}]
 \capo{2}
-\beginverse*{\nolyrics [Intro]: 
-}\endverse
 \beginverse*{\nolyrics [Intro]: \[C]  \[G]  \[Em]   \[D]         \brk
 }\endverse
 \beginverse
@@ -69,6 +67,4 @@ How a\[C]m I gonna be an o\[G]ptimist ab\[D]out this?\brk
 If you close your \[C]eyes,\brk
 Does it a\[G]lmost feel like\brk
 \[Em]Nothing changed at a\[D]ll?\brk
-\endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endchorus\endsong
