--- a/songs/Riptide.tex
+++ b/songs/Riptide.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Riptide}[by={Vance Joy}]
 \capo{1}
-\beginverse*{\nolyrics Intro: 
-\[Am]  \[G] \brk
+\beginverse*{\nolyrics Intro: \[Am]  \[G] \[C]\brk
 }\endverse
 \beginverse
 \[Am]I was scared of \[G]dentists and the \[C]dark\brk
