--- a/songs/Slzy_Tvý_Mámy.tex
+++ b/songs/Slzy_Tvý_Mámy.tex
@@ -34,5 +34,5 @@ I \[A]když byl někdo k tobě \[G]krutej, proč jsi \[F]znovu začal \[C]mezi s
 \[Am]Slzy tvý mámy \[G]šedivý \[Em]stékají \[Am]na polštář\brk
 \[F]Kdo tě zná, se vůbec \[G]nediví, že stárne \[C]její tvář \[E]         \brk
 \[Am]Nečekej úsměv od ženy, který si \[Dm]všechno vzal\brk
-Vrať jí ty \[Am]touhy zborcený, ať pro \[G]léta ztracený\[Em], nemusí \[Am]plakat  A D G B  Her    On Heavens   Of    You Feel The Love    chords and lyrics / well-aligned for easy auto-scrolling / short tabs for intro and verse patterns / suggestions for playable voicings and alternative chord    Will   Her  Na   chords and lyrics / well-aligned for easy auto-scrolling / short tabs for intro and verse patterns / suggestions for playable voicings and alternative chord  Of   On Heavens    You Feel The Love     - Slzy Tvý Mámy  - Slzy Tvý Mámy  - Slzy Tvý Mámy\brk
+Vrať jí ty \[Am]touhy zborcený, ať pro \[G]léta ztracený\[Em], nemusí \[Am]plakat.
 \endchorus\endsong
