--- a/songs/Srdce_Jako_Knize_Rohan.tex
+++ b/songs/Srdce_Jako_Knize_Rohan.tex
@@ -1,4 +1,4 @@
-\sclearpage\beginsong{Srdce Jako Knize Rohan}[by={Richard M\u00fcller}]
+\sclearpage\beginsong{Srdce Jako Knize Rohan}[by={Richard Müller}]
 \beginverse
 \[F]Měsíc je jak Zlatá bula \[C]Sicilská,\brk
 \[Am]stvrzuje se že kto chce ten se \[G]dopíská. \brk
@@ -62,5 +62,5 @@
 \[F]Ať je valcha u starýho \[C]Růžičky\brk
 \[Am]nebo pouť až k tváři Boží \[G]rodičky,\brk
 \[F]ať je válka, červen, mlha, \[C]bouřka nebo klid,\brk
-\[Am]srdce jako kníže Rohan \[G]musíš mít. \[C] A D G B   Sound Of  amp;  Or Without     Out      A   Out     Or Without  Je Krásná    It On    Muuml;ller - Srdce Jako Knize Rohan  Muuml;ller - Srdce Jako Knize Rohan  Muuml;ller - Srdce Jako Knize Rohan\brk
+\[Am]srdce jako kníže Rohan \[G]musíš mít. \[C] 
 \endchorus\endsong
