--- a/songs/Svaz_Českých_Bohémů.tex
+++ b/songs/Svaz_Českých_Bohémů.tex
@@ -1,8 +1,6 @@
 \sclearpage\beginsong{Svaz Českých Bohémů}[by={Wohnout}]
 \capo{1}
 \transpose{9}
-\beginverse*{\nolyrics Intro: 
-}\endverse
 \beginchorus
 \[G]Vracím se domů nad rán\[Dm]em, kvalitním vínem omá\[Am]men,\brk
 z přímek se stávaj zatáč\[F]ky, točí se\[C] svět, jsem na srač\[G]ky.\brk
@@ -54,5 +52,5 @@ bojovat \[C]proti systém\[G]u.\brk
 \beginverse
 \[G]Tak jsme se tu všichni sešli, \[Dm]co myslíš, osobo?\brk
 Tak jsme se tu všichni sešli, co myslíš, osude?              \[Dm]         \brk
-\[Am]Na to nelze říci než  \[F]to  A D G\[C] B  -2 pro originální tóninu   \brk
+\[Am]Na to nelze říci než  \[F]to nebude.
 \endverse\endsong
