--- a/songs/Sáro.tex
+++ b/songs/Sáro.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Sáro}[by={Traband}]
-\beginverse*{\nolyrics Intro: 
-\[Am]   \[Em]   \[F]   \[C]   \[F]   \[C]   \[F]   \[G]         \brk
+\beginverse*{\nolyrics Intro: \[Am]   \[Em]   \[F]   \[C]   \[F]   \[C]   \[F]   \[G]         \brk
 }\endverse
 \beginchorus
 \[Am]Sáro, \[Em]Sáro, v \[F]noci se mi \[C]zdálo,\brk
@@ -59,5 +58,5 @@ a \[F]v poledne už \[C]možná \[F]bude jiný s\[G]vět.\brk
 }\endverse
 \beginverse*{\nolyrics [Outro]: 
 \[F]Sáro, \[C]Sáro, \[F]vstávej, milá \[C]Sáro!\brk
-\[F]Andělé k nám \[Dm]přišli na  \[Cmaj7]A D G B   original D minor  - Sáro  - Sáro  - Sáro\brk
+\[F]Andělé k nám \[Dm]přišli na  \[Cmaj7]oběd.
 }\endverse\endsong
