--- a/songs/Thinking_Out_Loud.tex
+++ b/songs/Thinking_Out_Loud.tex
@@ -57,5 +57,5 @@ I'm thinking \[F]out l\[G]oud\brk
 \beginverse*{\nolyrics [Outro]: 
 That maybe \[Am]we f\[G]ound \[F]love ri\[C/E]ght w\[Dm]here \[G]we a\[C]re\brk
 Baby, \[Am]we f\[G]ound \[F]love r\[C/E]ight w\[Dm]here \[G]we a\[C]re\brk
-And \[Am]we f\[G]ound \[F]love \[C/E]right w\[Dm]here \[G]we a\[C]re[/tab]quot;,quo\brk
+And \[Am]we f\[G]ound \[F]love \[C/E]right w\[Dm]here \[G]we a\[C]re.
 }\endverse\endsong
