--- a/songs/This_Is_The_Life.tex
+++ b/songs/This_Is_The_Life.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{This Is The Life}[by={Amy Macdonald}]
 \capo{4}
-\beginverse*{\nolyrics Intro: 
-\[Am]   \[F]  \[C]  \[Em]         \brk
+\beginverse*{\nolyrics Intro: \[Am]   \[F]  \[C]  \[Em]         \brk
 }\endverse
 \beginverse
 Oh, the \[Am]wind whistles down\brk
