--- a/songs/Toulavej.tex
+++ b/songs/Toulavej.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Toulavej}[by={Vojta Kiďák Tomáško}]
-\beginverse*{\nolyrics Intro: 
-\[Am]  \[G] \[F] \[Am]         \brk
+\beginverse*{\nolyrics Intro: \[Am]  \[G] \[F] \[Am]         \brk
 }\endverse
 \beginverse
 Něk\[Am]do z vás, kdo chutnal dálk\[G]u, jeden z tě\[Am]ch, co roz\[E]uměj\brk
