--- a/songs/V_7_25.tex
+++ b/songs/V_7_25.tex
@@ -16,8 +16,8 @@
 \[D/F#]Přelidněné šestnáctky, však\brk
 \[Am]V době poslední\brk
 \[C]Ranní jízdy mi nezevšed\[G]ní,\brk
-\[G]Ptáte-li se bdquo;cože?ldquo;\brk
-\[E]Tak je to protože\brk
+\[G]Ptáte-li se "cože"?\brk
+\[E]Tak je to protože.\brk
 \endverse
 \beginchorus
 \[Am]V sedm dvacet pět nastupuje do šestnáctky,\brk
@@ -65,5 +65,5 @@ Když \[Am]v sedm dvacet pět nastupuje do šestnáctky,\brk
 \[G]Protože vždy oněmím,\brk
 \[E]Oněmím vždy v sedm dvacet\brk
 \[Am]ná ná\[G] na na ná...\brk
-\[E]Snad ji potkám v sedm dvacet \[Am]  A D G B       Jím A Mám To   jim a mam to rad:    Toleranci by Michal Horak feat. Tereza Balonova:    To   Horák - V 7 25  Horák - V 7 25  Horák - V 7 25  YEAR  YEAR \brk
+\[E]Snad ji potkám v sedm dvacet\[Am].
 \endchorus\endsong
