--- a/songs/V_Lese.tex
+++ b/songs/V_Lese.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{V Lese}[by={Pokáč}]
-\beginverse*{\nolyrics Intro: 
-\[F] \[C] \[G] \[G]         \brk
+\beginverse*{\nolyrics Intro: \[F] \[C] \[G] \[G]         \brk
 }\endverse
 \beginverse
 \[F]Dneska všichni \[C]říkají a \[G]všude píše \[Am]se,\brk
