--- a/songs/Veď_mě_dál,_cesto_má.tex
+++ b/songs/Veď_mě_dál,_cesto_má.tex
@@ -46,5 +46,5 @@ Veď mě \[F]dál, cesto \[C]má\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
 Veď mě \[F]dál, cesto \[C]má\brk
-Veď mě \[F]dál, cesto \[C] A D G B  Mě Dál Cesto    \brk
+Veď mě \[F]dál, cesto \[C]má.
 }\endverse\endsong
