--- a/songs/Viva_La_Vida.tex
+++ b/songs/Viva_La_Vida.tex
@@ -60,7 +60,4 @@ I \[G]know Saint Peter won't \[Em]call my name,\brk
 never an \[C]honest \[D]word\brk
 But that was \[Bm]when I ruled the \[Em]world\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-\[C]Ooooo\[D]h  \[Bm]Ooooo\[Em]oh\brk
-\[C]Ooooo\[D]h  \[Bm]  A D\[Em] G B  La  La  La  La  La\brk
-}\endverse\endsong
+\endsong
