--- a/songs/Vymlácený_Entry.tex
+++ b/songs/Vymlácený_Entry.tex
@@ -1,7 +1,6 @@
 \sclearpage\beginsong{Vymlácený Entry}[by={Pokáč}]
 \capo{4}
-\beginverse*{\nolyrics Intro: 
-\[C]  \[G]  \[D]  \[G]         \brk
+\beginverse*{\nolyrics Intro: \[C]  \[G]  \[D]  \[G]         \brk
 }\endverse
 \beginverse
 mám \[Em]nadupanej \[C]komp \[G]s grafikou \[D]jak svině\brk
