--- a/songs/Vymyslená.tex
+++ b/songs/Vymyslená.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Vymyslená}[by={Elán}]
-\beginverse*{\nolyrics Intro: 
-\[D] \brk
+\beginverse*{\nolyrics Intro: \[D]\[A]\[G]\[D] \brk
 }\endverse
 \beginverse
 \[D]Čakám ju pred \[A]domom \[G]prší mi za go\[D]lier\brk
