--- a/songs/When_Youre_Gone.tex
+++ b/songs/When_Youre_Gone.tex
@@ -47,7 +47,4 @@ Drink ain't doing what it sh\[C]ould \[G]         \brk
 Things just feel so w\[Dm]rong \[Bb](So wrong)\brk
 Baby, when you're g\[G]one (You're gone)\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-Baby, when you're g\[Dm]one \[Bb]         \brk
-Baby, when you're  \[F]         \brk
-}\endverse\endsong
+\endsong
