--- a/songs/With_Or_Without_You.tex
+++ b/songs/With_Or_Without_You.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{With Or Without You}[by={U2}]
-\beginverse*{\nolyrics Intro: 
-\[D] \[A] \[Bm]  \[G]         \brk
+\beginverse*{\nolyrics Intro: \[D] \[A] \[Bm]  \[G]         \brk
 }\endverse
 \beginverse
 \[D]See the ston\[A]e set in your eye\[Bm]s\brk
