--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sun Jan 15 23:41:09 CST 2023 by link-doc
+% Automatically generated at Mon Jan 16 04:32:13 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -37,7 +37,6 @@
 \input{songs/Leaving_On_A_Jet_Plane}
 \input{songs/Let_Her_Go}
 \input{songs/Let_It_Be}
-\input{songs/Let_My_Love_Open_The_Door}
 \input{songs/Láska_Na_Vsi}
 \input{songs/Malování}
 \input{songs/Malá_Dáma}
@@ -98,6 +97,8 @@
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zombie}
-\input{songs/old/Better_Together}
 \input{songs/Černí_andělé}
 \input{songs/Šaman}
+\input{songs/žž_DomcaSongs/Better_Together}
+\input{songs/žž_DomcaSongs/Let_My_Love_Open_The_Door}
+\input{songs/žž_HonzikSongs/Love_Again}
