--- a/songs/žž_DomcaSongs/Let_My_Love_Open_The_Door.tex
+++ b/songs/žž_DomcaSongs/Let_My_Love_Open_The_Door.tex
@@ -40,5 +40,4 @@ L\[F#m]et my love \[E]open the d\[D]oor\brk
 L\[F#m]et my love \[E]open the d\[D]oor\brk
 L\[F#m]et my love \[E]open the d\[D]oor\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
