--- a/songs/Bára.tex
+++ b/songs/Bára.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Bára}[by={Kabát}]
-\beginverse*{\nolyrics Intro: 
-\[H]  \[E]  \[G#m]     \[C#m]     \[A]  \[E]  \[G#m]    \[F#m]         \brk
+\beginverse*{\nolyrics Intro: \[H]  \[E]  \[G#m]     \[C#m]     \[A]  \[E]  \[G#m]    \[F#m]         \brk
 }\endverse
 \beginverse
 \[G#m]Jenom se \[C#m]ptej, \brk
