--- a/songs/Ž_DomcaSongs/AA_intro.tex
+++ b/songs/Ž_DomcaSongs/AA_intro.tex
@@ -1,2 +1,7 @@
 \sclearpage
-\textbf{Domčovy písničky}
+\vspace*{\fill}
+\begin{center}
+    \Huge\textbf{Domčovy písničky}
+\end{center}
+\vspace*{\fill}
+\clearpage
