--- a/songs/Ž_HonzikSongs/AA_intro.tex
+++ b/songs/Ž_HonzikSongs/AA_intro.tex
@@ -1,2 +1,7 @@
 \sclearpage
-\textbf{Honzíkovy písničky}
+\vspace*{\fill}
+\begin{center}
+    \Huge\textbf{Honzíkovy písničky}
+\end{center}
+\vspace*{\fill}
+\clearpage
