Possibility to save songs to owner folder.
At the end of the songbook.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Jan 16 05:05:00 CST 2023 by link-doc
+% Automatically generated at Mon Jan 16 05:18:03 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -10,7 +10,6 @@
 \input{songs/Baroko}
 \input{songs/Blíženci}
 \input{songs/Boulevard_Of_Broken_Dreams}
-\input{songs/Brandy_Youre_A_Fine_Girl}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
 \input{songs/Co_Z_Tebe_Bude}
@@ -41,14 +40,12 @@
 \input{songs/Malování}
 \input{songs/Malá_Dáma}
 \input{songs/Mamma_Mia}
-\input{songs/Mandy}
 \input{songs/Marie}
 \input{songs/Matfyzák_Na_Discu}
 \input{songs/Mikymauz}
 \input{songs/Million_Reasons}
 \input{songs/Mimorealita}
 \input{songs/Minulost}
-\input{songs/Mmm_Mmm_Mmm_Mmm}
 \input{songs/Mrs_Robinson}
 \input{songs/Mám_Doma_Kočku}
 \input{songs/Mám_Jizvu_Na_Rtu}
@@ -87,7 +84,6 @@
 \input{songs/Viva_La_Vida}
 \input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
-\input{songs/Waiting_On_The_World_To_Change}
 \input{songs/Waterloo}
 \input{songs/When_All_Is_Said_And_Done}
 \input{songs/When_Youre_Gone}
@@ -100,7 +96,12 @@
 \input{songs/Šaman}
 \input{songs/Ž_DomcaSongs/AA_intro}
 \input{songs/Ž_DomcaSongs/Better_Together}
+\input{songs/Ž_DomcaSongs/Brandy_Youre_A_Fine_Girl}
 \input{songs/Ž_DomcaSongs/Let_My_Love_Open_The_Door}
+\input{songs/Ž_DomcaSongs/Mandy}
+\input{songs/Ž_DomcaSongs/Mmm_Mmm_Mmm_Mmm}
+\input{songs/Ž_DomcaSongs/Waiting_On_The_World_To_Change}
 \input{songs/Ž_HonzikSongs/AA_intro}
+\input{songs/Ž_HonzikSongs/House_Of_Memories}
 \input{songs/Ž_HonzikSongs/Love_Again}
 \input{songs/ŽŽ-endsongs}
