--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Jan 16 05:18:03 CST 2023 by link-doc
+% Automatically generated at Mon Jan 16 05:30:05 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -104,4 +104,6 @@
 \input{songs/Ž_HonzikSongs/AA_intro}
 \input{songs/Ž_HonzikSongs/House_Of_Memories}
 \input{songs/Ž_HonzikSongs/Love_Again}
+\input{songs/Ž_LuckaSongs/AA_intro}
+\input{songs/Ž_LuckaSongs/The_Saga_Begins}
 \input{songs/ŽŽ-endsongs}
