Rename owner folders.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Jan 16 05:30:05 CST 2023 by link-doc
+% Automatically generated at Mon Jan 16 05:31:33 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -94,16 +94,16 @@
 \input{songs/Zombie}
 \input{songs/Černí_andělé}
 \input{songs/Šaman}
-\input{songs/Ž_DomcaSongs/AA_intro}
-\input{songs/Ž_DomcaSongs/Better_Together}
-\input{songs/Ž_DomcaSongs/Brandy_Youre_A_Fine_Girl}
-\input{songs/Ž_DomcaSongs/Let_My_Love_Open_The_Door}
-\input{songs/Ž_DomcaSongs/Mandy}
-\input{songs/Ž_DomcaSongs/Mmm_Mmm_Mmm_Mmm}
-\input{songs/Ž_DomcaSongs/Waiting_On_The_World_To_Change}
-\input{songs/Ž_HonzikSongs/AA_intro}
-\input{songs/Ž_HonzikSongs/House_Of_Memories}
-\input{songs/Ž_HonzikSongs/Love_Again}
-\input{songs/Ž_LuckaSongs/AA_intro}
-\input{songs/Ž_LuckaSongs/The_Saga_Begins}
-\input{songs/ŽŽ-endsongs}
+\input{songs/ŽŽ_DomcaSongs/AA_intro}
+\input{songs/ŽŽ_DomcaSongs/Better_Together}
+\input{songs/ŽŽ_DomcaSongs/Brandy_Youre_A_Fine_Girl}
+\input{songs/ŽŽ_DomcaSongs/Let_My_Love_Open_The_Door}
+\input{songs/ŽŽ_DomcaSongs/Mandy}
+\input{songs/ŽŽ_DomcaSongs/Mmm_Mmm_Mmm_Mmm}
+\input{songs/ŽŽ_DomcaSongs/Waiting_On_The_World_To_Change}
+\input{songs/ŽŽ_HonzikSongs/AA_intro}
+\input{songs/ŽŽ_HonzikSongs/House_Of_Memories}
+\input{songs/ŽŽ_HonzikSongs/Love_Again}
+\input{songs/ŽŽ_LuckaSongs/AA_intro}
+\input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
+\input{songs/ŽŽŽ-endsongs}
