--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Jan 16 05:31:33 CST 2023 by link-doc
+% Automatically generated at Tue Jan 17 09:31:39 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -16,7 +16,6 @@
 \input{songs/Darmodej}
 \input{songs/Dej_Mi_Víc_Své_Lásky}
 \input{songs/Demons}
-\input{songs/Dont_Go_Breaking_My_Heart}
 \input{songs/Dont_Look_Back_In_Anger}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
@@ -30,7 +29,9 @@
 \input{songs/Im_A_Believer}
 \input{songs/Jarní_Tání}
 \input{songs/Jasná_Zpráva}
+\input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
+\input{songs/Kupte_Si_Hřebeny}
 \input{songs/Kutil}
 \input{songs/Lachtani}
 \input{songs/Leaving_On_A_Jet_Plane}
@@ -52,7 +53,6 @@
 \input{songs/Můj_Svět}
 \input{songs/Nagasaki_Hirošima}
 \input{songs/Netušim}
-\input{songs/Not_Fair}
 \input{songs/Okno_Mé_Lásky}
 \input{songs/On_Top_Of_The_World}
 \input{songs/Osmý_Den}
@@ -68,7 +68,6 @@
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Svaz_Českých_Bohémů}
-\input{songs/Sweet_Child_O_Mine}
 \input{songs/Sáro}
 \input{songs/Take_It_Easy}
 \input{songs/The_Weight}
@@ -78,6 +77,7 @@
 \input{songs/Těšínská}
 \input{songs/Tři_Kříže}
 \input{songs/Ulica}
+\input{songs/Untitled}
 \input{songs/V_7_25}
 \input{songs/V_Lese}
 \input{songs/Veď_mě_dál,_cesto_má}
@@ -100,10 +100,15 @@
 \input{songs/ŽŽ_DomcaSongs/Let_My_Love_Open_The_Door}
 \input{songs/ŽŽ_DomcaSongs/Mandy}
 \input{songs/ŽŽ_DomcaSongs/Mmm_Mmm_Mmm_Mmm}
+\input{songs/ŽŽ_DomcaSongs/Sweet_Child_O_Mine}
 \input{songs/ŽŽ_DomcaSongs/Waiting_On_The_World_To_Change}
 \input{songs/ŽŽ_HonzikSongs/AA_intro}
 \input{songs/ŽŽ_HonzikSongs/House_Of_Memories}
 \input{songs/ŽŽ_HonzikSongs/Love_Again}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
+\input{songs/ŽŽ_Ybokem/AA_intro}
+\input{songs/ŽŽ_Ybokem/Ayo_Technology}
+\input{songs/ŽŽ_Ybokem/Dont_Go_Breaking_My_Heart}
+\input{songs/ŽŽ_Ybokem/Not_Fair}
 \input{songs/ŽŽŽ-endsongs}
