Minor updates and new songs.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,7 +1,8 @@
 % Index file for Songbook.pdf
-% Automatically generated at Tue Jan 17 09:31:39 CST 2023 by link-doc
+% Automatically generated at Tue Jan 17 21:59:04 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
+\input{songs/1970}
 \input{songs/1_Signální}
 \input{songs/Accidentally_In_Love}
 \input{songs/Africa}
@@ -17,13 +18,16 @@
 \input{songs/Dej_Mi_Víc_Své_Lásky}
 \input{songs/Demons}
 \input{songs/Dont_Look_Back_In_Anger}
+\input{songs/Drobná_Paralela}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
 \input{songs/Grónská_písnička}
 \input{songs/Hallelujah}
+\input{songs/Hero}
 \input{songs/Hey_There_Delilah}
 \input{songs/Hlupák_Váhá}
 \input{songs/Holky_To_Objektivně_Lehčí_Maj}
+\input{songs/Hollywood_Hills}
 \input{songs/Honey_Honey}
 \input{songs/Hotel_California}
 \input{songs/Im_A_Believer}
@@ -64,6 +68,7 @@
 \input{songs/Pohoda}
 \input{songs/Pompeii}
 \input{songs/Riptide}
+\input{songs/Runaway_Train}
 \input{songs/Ráda_Se_Miluje}
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
@@ -73,6 +78,7 @@
 \input{songs/The_Weight}
 \input{songs/Thinking_Out_Loud}
 \input{songs/This_Is_The_Life}
+\input{songs/Touha}
 \input{songs/Toulavej}
 \input{songs/Těšínská}
 \input{songs/Tři_Kříže}
@@ -94,6 +100,7 @@
 \input{songs/Zombie}
 \input{songs/Černí_andělé}
 \input{songs/Šaman}
+\input{songs/Šrouby_A_Matice}
 \input{songs/ŽŽ_DomcaSongs/AA_intro}
 \input{songs/ŽŽ_DomcaSongs/Better_Together}
 \input{songs/ŽŽ_DomcaSongs/Brandy_Youre_A_Fine_Girl}
@@ -109,6 +116,7 @@
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
 \input{songs/ŽŽ_Ybokem/AA_intro}
 \input{songs/ŽŽ_Ybokem/Ayo_Technology}
+\input{songs/ŽŽ_Ybokem/Breakfast_At_Tiffanys}
 \input{songs/ŽŽ_Ybokem/Dont_Go_Breaking_My_Heart}
 \input{songs/ŽŽ_Ybokem/Not_Fair}
 \input{songs/ŽŽŽ-endsongs}
