--- a/songs/1970.tex
+++ b/songs/1970.tex
@@ -34,5 +34,5 @@ Cas \[F]padi, cas leti, tezko ta \[G]leta vratis zpet a tak i \[C]Husakovy deti\
 dospely \[Am]do Kristovych let.\brk
 Cas pa\[F]di, cas leti a j\[G]e to zvlastni svet a tak i \[C]Husakovy deti dospely\brk
 d\[D]o Kristovych let.\brk
-Cas\[F] padi, cas  A D G B  is actually transposed half step down from the original. capo on  Od   for acoustic guitar with original song structure and C to D    Sound Of  amp;  On   some chords, now it should be  Od    for acoustic guitar with original song structure and C to D   version is suitable fo\brk
+Cas\[F] padi, cas letí.
 }\endverse\endsong
